# SuperTetris

./: .dockerignore  Dockerfile.client  README.md  build.sh  docker-compose.yml  integration_test.sh  package-lock.json  package.json  requirements.txt  start.bat  start.sh  system_test.sh  todo.md
cpp-physics/: CMakeLists.txt  Dockerfile  FFIInterface.cpp  server.cpp
cpp-physics/include/: PhysicsEngine.h
docker/: cpp-physics.Dockerfile
docs/: api.md  architecture.md  architecture_validation.md  deployment.md  development.md  integration.md  security.md  testing.md
research/: game_analysis.md
scripts/: launcher.py
src/: __init__.py
src/common_utils/: __init__.py  config_utils.py  file_utils.py  json_utils.py  logging_utils.py  pytest.ini  validation.py
src/common_utils/tests/: conftest.py  test_config_utils.py  test_file_utils.py  test_json_utils.py  test_logging_utils.py  test_validation.py
src/cpp_physics/: CMakeLists.txt  Dockerfile  PhysicsEngine.cpp  main.cpp  physics_engine.cpp  test_physics.cpp
src/go_tools/utils/: config.go
src/integration/: README.md
src/python_ai/: Dockerfile  __init__.py  requirements.txt
src/python_ai/src/: ai_system.py  api.py  constants.py  main.py  models.py
src/python_ai/tests/: test_ai_system.py  test_config.py  test_constants.py  test_logger.py  test_models.py  test_utils.py
src/python_analytics/: Dockerfile  __init__.py  alert_system.py  requirements.txt
src/python_analytics/analyzers/: gameplay_analyzer.py
src/python_analytics/data_collectors/: base_collector.py  gameplay_collector.py
src/python_analytics/models/: data_models.py
src/python_analytics/reporters/: dashboard_reporter.py
src/python_analytics/src/: __init__.py  config.py  data_export.py  main.py
src/python_analytics/templates/: dashboard.html
src/python_logic/: Dockerfile  __init__.py  config.py  game_logic.py  requirements.txt
src/python_logic/cpp-physics/: CMakeLists.txt  Dockerfile  FFIInterface.cpp  PhysicsEngine.cpp  example.cpp  server.cpp  vcpkg-configuration.json  vcpkg.json
src/python_logic/cpp-physics/include/: FFIInterface.h  PhysicsEngine.h  Vector2.h
src/python_logic/src/: main.py
src/python_server/: Dockerfile  README.md  __init__.py  requirements.txt
src/python_server/examples/: client.py  config_examples.py  logging_examples.py  test_client.py
src/python_server/src/: __init__.py  config.py  exceptions.py  main.py  utils.py
src/python_server/src/game/: manager.py  types.py
src/python_server/src/network/: manager.py
src/python_server/src/physics/: manager.py
src/python_server/src/session/: manager.py
src/python_server/tests/: test_game.py  test_network.py  test_physics.py  test_session.py  test_utils.py
src/python_tools/: Dockerfile  __init__.py  requirements.txt
src/python_tools/analyzer/: __init__.py  analyzer.py
src/python_tools/api/: __init__.py
src/python_tools/editor/: __init__.py  editor.py
src/python_tools/generator/: __init__.py  generator.py
src/python_tools/profiler/: __init__.py  profiler.py
src/python_tools/src/: main.py
src/python_tools/utils/: __init__.py  config.py  logger.py  validation.py
src/tests/: integration_tests.py
src/typescript_client/: .eslintrc.json  Dockerfile  GameUI.css  eslint.config.js  index.html  jest.config.js  package-lock.json  package.json  tsconfig.json  webpack.config.js
src/typescript_client/public/: index.html
src/typescript_client/src/: Game.tsx  game_renderer.tsx  index.tsx  setupTests.ts
src/typescript_client/src/__tests__/: BlockDisplay.test.tsx  Game.test.tsx  GameBoard.test.tsx  GameMenu.test.tsx  GameOver.test.tsx  GameSettings.test.tsx  SpellDisplay.test.tsx  gameService.test.ts  gameUtils.test.ts  mocks.ts  setup.ts  types.ts  useWebSocket.test.ts
src/typescript_client/src/components/: BlockDisplay.tsx  GameBoard.tsx  GameMenu.tsx  GameOver.tsx  GamePause.tsx  GameSettings.tsx  SpellDisplay.tsx  TetrominoDisplay.tsx
src/typescript_client/src/constants/: game.ts
src/typescript_client/src/hooks/: useGameLoop.ts  useKeyboard.ts  useWebSocket.ts
src/typescript_client/src/services/: gameService.ts
src/typescript_client/src/styles/: GameUI.css  components.css  index.css
src/typescript_client/src/types/: game.ts
src/typescript_client/src/utils/: game.ts
tests/: run_integration_tests.py
